--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=cyrillic,greek'>
 	<link rel='stylesheet' href='/css/style.css'>
 
-	<script src='https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js'></script>
+	<script src='https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js'></script>
 </head>
 
 <body onload='init();' spellcheck='false' class='flex flex-col'>
