lowercase UI text

--- a/html/index.html
+++ b/html/index.html
@@ -42,17 +42,17 @@
 	</main>
 
 	<aside id='serverlist' class='flex flex-col'>
-		<h2>Other Servers</h2>
+		<h2>other servers</h2>
 		<div v-if='servers.length' class='scrollable-x'>
 			<table>
 				<thead>
 					<tr>
-						<td>Players</td>
-						<td>Description</td>
-						<td>Mode</td>
-						<td>Map</td>
-						<td>Time Left</td>
-						<td>Master Mode</td>
+						<td>players</td>
+						<td>description</td>
+						<td>mode</td>
+						<td>map</td>
+						<td>time left</td>
+						<td>master mode</td>
 					</tr>
 				</thead>
 				<tbody>
@@ -79,7 +79,7 @@
 			Sauerbraten live monitor by pix.
 		</small>
 		<small>
-			<a href='https://github.com/sauerbraten/extinfo-web'>Code on GitHub</a>
+			<a href='https://github.com/sauerbraten/extinfo-web'>Code on Github.</a>
 		</small>
 	</footer>
 
@@ -162,10 +162,10 @@
 						<table>
 							<thead>
 								<tr>
-									<td>Frags</td>
-									<td>Deaths</td>
-									<td>Accuracy</td>
-									<td>Name</td>
+									<td>frags</td>
+									<td>deaths</td>
+									<td>accuracy</td>
+									<td>name</td>
 								</tr>
 							</thead>
 							<tbody>
