lowercase footer text

--- a/html/index.html
+++ b/html/index.html
@@ -76,10 +76,10 @@
 
 	<footer class='flex flex-row centered'>
 		<small>
-			Sauerbraten live monitor by pix.
+			sauerbraten live monitor by pix.
 		</small>
 		<small>
-			<a href='https://github.com/sauerbraten/extinfo-web'>Code on Github.</a>
+			<a href='https://github.com/sauerbraten/extinfo-web'>code on github.</a>
 		</small>
 	</footer>
 
