typo in meta description

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 	<meta charset='utf-8'>
 
 	<title>extinfo: sauerbraten live monitor</title>
-	<meta name='description' content='Sauerbraten live monitor allows you to see server information and player statistics in real-time.'>
+	<meta name='description' content='Sauerbraten live monitor that allows you to see server information and player statistics in real-time.'>
 
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=cyrillic,greek'>
 	<link rel='stylesheet' href='/css/style.css'>
