refactor frontend code
- use JS modules
- make server list a Vue component
- split HTML and JS more cleanly

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 	<script src='https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js'></script>
 </head>
 
-<body onload='init();' spellcheck='false' class='flex flex-col'>
+<body spellcheck='false' class='flex flex-col'>
 	<main id='scoreboard' :style='{ background: backgroundImageCSS }'>
 		<header>
 			<h1 class='scrollable-x'>
@@ -30,10 +30,10 @@
 
 		<section class='flex flex-row'>
 			<player-list v-for='team in teams' :key='team.name' :title='`${team.name}: ${team.score}`' :players='team.players'></player-list>
-			<player-list v-if='teamless.length > 0' :players='teamless'></player-list>
+			<player-list v-if='teamless.length' :players='teamless'></player-list>
 		</section>
 
-		<section v-show='spectators.length > 0'>
+		<section v-show='spectators.length'>
 			<h2>spectators</h2>
 			<div class='flex flex-row centered'>
 				<player-name v-for='spectator in spectators' :key='spectator.clientNum' :player='spectator'></player-name>
@@ -43,35 +43,7 @@
 
 	<aside id='serverlist' class='flex flex-col'>
 		<h2>other servers</h2>
-		<div v-if='servers.length' class='scrollable-x'>
-			<table>
-				<thead>
-					<tr>
-						<td>players</td>
-						<td>description</td>
-						<td>mode</td>
-						<td>map</td>
-						<td>time left</td>
-						<td>master mode</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr v-for='server in servers'>
-						<td class='count'>{{server.numberOfClients}}</td>
-						<td>
-							<a :href='"#"+server.address' class='subtle'>{{server.description}}</a>
-						</td>
-						<td>{{server.gameMode}}</td>
-						<td>{{server.map}}</td>
-						<td class='centered'><time-remaining :secs-left='server.secsLeft'></time-remaining></td>
-						<td>{{server.masterMode}}</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<p v-else class='centered'>
-			loading...
-		</p>
+		<server-list :servers='servers'></server-list>
 	</aside>
 
 	<footer class='flex flex-row centered'>
@@ -83,143 +55,7 @@
 		</small>
 	</footer>
 
-	<script src='/js/extinfo.js'></script>
-
-	<script>
-		Vue.component('time-remaining', {
-			props: {
-				secsLeft: {
-					type: Number,
-					default: 0
-				}
-			},
-			data() {
-				return {
-					liveSecsLeft: 0,
-					secsLeftUpdaters: []
-				}
-			},
-			watch: {
-				secsLeft: {
-					handler: function(newSecsLeft) {
-						for (const updater of this.secsLeftUpdaters) {
-							window.clearTimeout(updater)
-						}
-						this.secsLeftUpdaters = []
-						this.liveSecsLeft = newSecsLeft
-						for (let i = 1; i < 5 && i <= newSecsLeft; i++) {
-							this.secsLeftUpdaters.push(window.setTimeout(() => this.liveSecsLeft--, i*1000))
-						}
-					},
-					immediate: true
-				}
-			},
-			computed: {
-				timeLeft() {
-					const pad = i => (i < 10 ? '0' : '') + i
-					const formatTimeLeft = s => `${pad(Math.floor(s / 60))}:${pad(s % 60)}`
-					return formatTimeLeft(this.liveSecsLeft)
-				}
-			},
-			template: `<span>{{timeLeft}}</span>`
-		})
-
-
-		Vue.component('player-name', {
-			props: {
-				player: {
-					type: Object,
-					default: {
-						name: '',
-						clientNum: -1,
-						privilege: 'none'
-					}
-				}
-			},
-			template: `
-				<span>
-					<span v-if='player.privilege != "none"' :class='"priv-"+player.privilege' :title='player.privilege'>{{player.name}}</span>
-					<span v-else>{{player.name}}</span>
-					<span class='cn'>({{player.clientNum}})</span>
-				</span>`,
-		})
-
-		Vue.component('player-list', {
-			props: {
-				title: {
-					type: String,
-					default: "players"
-				},
-				players: {
-					type: Array,
-					default: []
-				}
-			},
-			template: `
-				<div class='team flex flex-col'>
-					<h2>{{title}}</h2>
-					<div class='team-table scrollable-x'>
-						<table>
-							<thead>
-								<tr>
-									<td>frags</td>
-									<td>deaths</td>
-									<td>accuracy</td>
-									<td>name</td>
-								</tr>
-							</thead>
-							<tbody>
-								<tr v-for='player in players'>
-									<td class='count'>{{player.frags}}</td>
-									<td class='count'>{{player.deaths}}</td>
-									<td class='count'>{{player.accuracy}}%</td>
-									<td><player-name :player='player'></player-name></td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>`,
-		})
-
-		const bgImgOverlayCSS = 'linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3))'
-		const bgImgMapshotCSS = map => `url('//sauertracker.net/images/mapshots/${map}.jpg') no-repeat center center / cover`
-		const bgImgFallbackCSS = bgImgMapshotCSS('firstevermap')
-
-		const scoreboard = {
-			info: {
-				description: 'loading...',
-				gameMode: 'ffa',
-				map: 'firstevermap',
-				secsLeft: 0,
-				masterMode: 'open',
-				numberOfClients: 0,
-				maxNumberOfClients: 0
-			},
-			teams: {},
-			teamless: [],
-			spectators: [],
-		}
-
-		new Vue({
-			el: '#scoreboard',
-			data: scoreboard,
-			computed: {
-				backgroundImageCSS: () => `${bgImgOverlayCSS}, ${bgImgMapshotCSS(scoreboard.info.map)}, ${bgImgFallbackCSS}`
-			}
-		})
-
-		const serverlist = {
-			servers: []
-		}
-
-		new Vue({
-			el: '#serverlist',
-			data: serverlist,
-			methods: {
-				isTeamMode: mode => !(['ffa', 'coop edit', 'instagib', 'efficiency', 'tactics'].includes(mode))
-			}
-		})
-	</script>
+	<script src='/js/extinfo.js' type='module'></script>
 </body>
 
 </html>
