clean up for 2025

--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,12 @@
 	<title>extinfo: sauerbraten live monitor</title>
 	<meta name='description' content='Sauerbraten live monitor that allows you to see server information and player statistics in real-time.'>
 
-	<!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=cyrillic,greek'> -->
 	<link rel='stylesheet' href='/css/style.css'>
 </head>
 
 <body spellcheck='false' class='flex flex-col'>
 
-	<!-- lit-html app -->
+	<!-- lit-html body -->
 
 	<footer id='footer' class='flex flex-row centered'>
 		<small>
